[package]
name = "advent_2020"
version = "0.1.0"
authors = ["Arthur Brussee <arthur.brussee@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 0               # Use slightly better optimizations.
overflow-checks = false     # Disable integer overflow checks.

[dependencies]
